Change order of setting filter and value (one resets the other) First set the values and then connect the signal For the layout set the layout policy.

Patch by Ralf Engels <ralf-engels@gmx.de>.

BUG: 243562